--- a/local.yml
+++ b/local.yml
@@ -8,7 +8,7 @@
       update_cache: true
       state: present
     tags:
-      - imstall
+      - install
       - core
 
   tasks:
@@ -16,5 +16,5 @@
     - include: tasks/zsh.yml
     # - include: tasks/ssh.yml
     # - include: tasks/git.yml
-    # - include: tasks/nvim.yml
+    - include: tasks/nvim.yml
     # - include: tasks/dotfiles.yml
