--- a/local.yml
+++ b/local.yml
@@ -1,5 +1,7 @@
 - hosts: localhost
   vars:
+    source_key: "./.ssh/id_rsa_gh"
+    dest_key: "{{ lookup('env', 'HOME') }}/.ssh/id_rsa_gh"
   pre_tasks:
   - name: Update Apt Packages
     become: true
@@ -13,8 +15,8 @@
 
   tasks:
     - include: tasks/core.yml
-    - include: tasks/zsh.yml
-    # - include: tasks/ssh.yml
-    # - include: tasks/git.yml
+     # - include: tasks/zsh.yml
+    - include: tasks/ssh.yml
+    - include: tasks/git.yml
     - include: tasks/nvim.yml
-    # - include: tasks/dotfiles.yml
+    - include: tasks/dotfiles.yml
