--- a/local.yml
+++ b/local.yml
@@ -15,8 +15,8 @@
 
   tasks:
     - include: tasks/core.yml
-     # - include: tasks/zsh.yml
     - include: tasks/ssh.yml
     - include: tasks/git.yml
+    - include: tasks/zsh.yml
     - include: tasks/nvim.yml
     - include: tasks/dotfiles.yml
