Setup ssh known_hosts and git config for github

--- a/tasks/ssh.yaml
+++ b/tasks/ssh.yaml
@@ -29,3 +29,12 @@
     - full
     - ssh
 
+- name: Add github.com as known host for ssh
+  ansible.builtin.known_hosts:
+    name: github.com
+    key: "{{ lookup('pipe', 'ssh-keyscan github.com') }}'"
+    state: present
+  tags:
+    - full
+    - ssh
+
