--- a/local.yaml
+++ b/local.yaml
@@ -13,11 +13,11 @@
   tasks:
   - include: tasks/core.yaml
   - include: tasks/ssh.yaml
+  - include: tasks/git.yaml
     #    - include: tasks/rust.yaml
     #    - include: tasks/go.yaml
     #    - include: tasks/haskell.yaml
     #    - include: tasks/docker.yaml
-    #    - include: tasks/git.yaml
     #    - include: tasks/dotfiles.yaml
     #    - include: tasks/nvim.yaml
     #    - include: tasks/apps.yaml
