--- a/local.yaml
+++ b/local.yaml
@@ -14,11 +14,11 @@
   - include: tasks/core.yaml
   - include: tasks/ssh.yaml
   - include: tasks/git.yaml
+  - include: tasks/dotfiles.yaml
     #    - include: tasks/rust.yaml
     #    - include: tasks/go.yaml
     #    - include: tasks/haskell.yaml
     #    - include: tasks/docker.yaml
-    #    - include: tasks/dotfiles.yaml
     #    - include: tasks/nvim.yaml
     #    - include: tasks/apps.yaml
     #    - include: tasks/alacritty.yaml
