Install Rust toolchain

--- a/local.yaml
+++ b/local.yaml
@@ -15,7 +15,7 @@
   - include: tasks/ssh.yaml
   - include: tasks/git.yaml
   - include: tasks/dotfiles.yaml
-    #    - include: tasks/rust.yaml
+  - include: tasks/rust.yaml
     #    - include: tasks/go.yaml
     #    - include: tasks/haskell.yaml
     #    - include: tasks/docker.yaml
