--- a/local.yaml
+++ b/local.yaml
@@ -20,6 +20,7 @@
   - include: tasks/rust.yaml
   - include: tasks/go.yaml
   - include: tasks/haskell.yaml
+  - include: tasks/xmonad.yaml
     #    - include: tasks/docker.yaml
     #    - include: tasks/nvim.yaml
   - include: tasks/apps.yaml
