Configure xmonad as my desktop manager

--- a/tasks/xmonad.yaml
+++ b/tasks/xmonad.yaml
@@ -5,4 +5,10 @@
   tags:
     - full
     - xmonad
+
+- name: Import xmonad as window manager
+  shell: |
+    cp xmonad.xsession "{{ lookup('ansible.builtin.env', 'HOME') }}/.xsession"
+    cp xmonad.desktop /usr/share/xsessions/xmonad.desktop
+
   
