--- a/local.yaml
+++ b/local.yaml
@@ -21,10 +21,9 @@
   - include: tasks/go.yaml
   - include: tasks/haskell.yaml
   - include: tasks/xmonad.yaml
-    #    - include: tasks/docker.yaml
     #    - include: tasks/nvim.yaml
-  - include: tasks/apps.yaml
     #    - include: tasks/alacritty.yaml
-    #    - include: tasks/zsh.yaml
-    #
+    #    - include: tasks/docker.yaml
+  - include: tasks/apps.yaml
+  - include: tasks/zsh.yaml
   - include: tasks/jetbrains.yaml
