--- a/tasks/apps.yaml
+++ b/tasks/apps.yaml
@@ -7,3 +7,37 @@
     - full
     - apps
 
+- name: Add OBS Studio PPA repository
+  become: True
+  ansible.builtin.apt_repository:
+    repo: ppa:obsproject/obs-studio
+  tags:
+    - full
+    - apps
+
+
+- name: Install OBS Studio
+  become: True
+  ansible.builtin.apt:
+    name:
+      - obs-studio
+  tags:
+    - full
+    - apps
+
+- name: Add Kdenlive repository
+  become: True
+  ansible.builtin.apt_repository:
+    repo: ppa:kdenlive/kdenlive-stable
+  tags:
+    - full
+    - apps
+
+- name: Install Kdenlive
+  become: True
+  ansible.builtin.apt:
+    name:
+      - kdenlive
+  tags:
+    - full
+    - apps
