--- a/tasks/apps.yaml
+++ b/tasks/apps.yaml
@@ -13,6 +13,7 @@
     repo: ppa:obsproject/obs-studio
   tags:
     - full
+    - obs
     - apps
 
 
@@ -23,6 +24,7 @@
       - obs-studio
   tags:
     - full
+    - obs
     - apps
 
 - name: Add Kdenlive repository
@@ -31,6 +33,7 @@
     repo: ppa:kdenlive/kdenlive-stable
   tags:
     - full
+    - kdenlive
     - apps
 
 - name: Install Kdenlive
@@ -40,4 +43,39 @@
       - kdenlive
   tags:
     - full
+    - kdenlive
     - apps
+
+- name: Check if jetbrains-toolbox is already installed
+  shell: command -v jetbrains-toolbox
+  register: jt_exists
+  ignore_errors: yes
+  tags:
+    - full
+    - jetbrains
+    - apps
+
+- name: Download Jetbrains toolbox archive
+  when: jt_exists is failed
+  get_url:
+    url: "https://download-cdn.jetbrains.com/toolbox/jetbrains-toolbox-1.27.1.13673.tar.gz"
+    dest: "/tmp/jetbrains-toolbox.tar.gz"
+    mode: '0755'
+    checksum: sha256:5108db9f3ee2828e50887a1f4fb41ce50a4df8c1ebbef87cd931bbb726661d5e
+  tags:
+    - full
+    - jetbrains
+    - apps
+
+- name: Unarchive Jetbrains Toolbox archive
+  when: jt_exists is failed
+  become: true
+  ansible.builtin.unarchive:
+    src: "/tmp/jetbrains-toolbox.tar.gz"
+    dest: "{{ lookup('ansible.builtin.env', 'HOME') }}/.local/bin"
+    remote_src: yes
+  tags:
+    - full
+    - jetbrains
+    - apps
+
