--- a/local.yaml
+++ b/local.yaml
@@ -22,7 +22,7 @@
   - include: tasks/haskell.yaml
   - include: tasks/xmonad.yaml
   - include: tasks/nvim.yaml
-    #    - include: tasks/alacritty.yaml
+  - include: tasks/alacritty.yaml
     #    - include: tasks/docker.yaml
   - include: tasks/apps.yaml
   - include: tasks/zsh.yaml
