Install nodejs and n, the version manager for node

--- a/local.yaml
+++ b/local.yaml
@@ -21,6 +21,8 @@
   - include: tasks/go.yaml
   - include: tasks/haskell.yaml
   - include: tasks/xmonad.yaml
+  - include: tasks/n.yaml
+  - include: tasks/nodejs.yaml
   - include: tasks/nvim.yaml
   - include: tasks/alacritty.yaml
     #    - include: tasks/docker.yaml
