Install packer for neovim plugins

--- a/local.yaml
+++ b/local.yaml
@@ -20,7 +20,7 @@
   - include: tasks/rust.yaml
   - include: tasks/go.yaml
   - include: tasks/haskell.yaml
-  - include: tasks/xmonad.yaml
+    #  - include: tasks/xmonad.yaml
   - include: tasks/n.yaml
   - include: tasks/nodejs.yaml
   - include: tasks/nvim.yaml
