--- a/tasks/nvim.yaml
+++ b/tasks/nvim.yaml
@@ -1,8 +1,26 @@
+- name: Install neovim apt repository
+  become: true
+  ansible.builtin.apt_repository:
+    repo: ppa:neovim-ppa/stable
+  tags:
+    - full
+    - nvim
+
 - name: Install Neovim
   become: true
   ansible.builtin.apt:
     name:
       - neovim
+  tags:
+    - full
+    - nvim
+
+- name: Clone packer repo
+  ansible.builtin.git:
+    repo: "https://github.com/wbthomason/packer.nvim"
+    dest: "{{ lookup('ansible.builtin.env', 'HOME') }}/.local/share/nvim/site/pack/packer/start/packer.nvim"
+    depth: 1
+    force: yes
   tags:
     - full
     - nvim
